--- a/assets/web/assets/icons2/2.css
+++ b/assets/web/assets/icons2/2.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'Moririse2';
   font-display: swap;
-  src:  url('2.eot?f2bix4');
-  src:  url('2.eot?f2bix4#iefix') format('embedded-opentype'),
-    url('2.ttf?f2bix4') format('truetype'),
-    url('2.woff?f2bix4') format('woff'),
-    url('2.svg?f2bix4#mobirise2') format('svg');
+  src:  url('mobirise2.eot?f2bix4');
+  src:  url('mobirise2.eot?f2bix4#iefix') format('embedded-opentype'),
+    url('mobirise2.ttf?f2bix4') format('truetype'),
+    url('mobirise2.woff?f2bix4') format('woff'),
+    url('mobirise2.svg?f2bix4#mobirise2') format('svg');
   font-weight: normal;
   font-style: normal;
 }
